# ictfromabc

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
Backups/: authmanager_debug.cxx.bak
include/: authmanager.hxx  localproxyserver.hxx  videobackend.hxx
rvsEng_API/: Login_endpoint.txt
src/: authmanager.cxx  localproxyserver.cxx  main.cxx
ui/: ictfromabcUI.qml
ui/components/: HLine.qml  LessonCard.qml  LoginScreen.qml  Main_Shell.qml  MyLessonsView.qml  NavBar.qml  NavBarIcon.qml  SideBar.qml  SideBarItem.qml  SocialButton.qml  Socials.qml  StartBtns.qml
ui/theme/: qmldir  theme.qml
